# EasyMGTD

./: .env.example  .gitignore  README.md  easymgtd.yml  pyproject.toml  requirements.txt
docs/: 2026-03-10_refactoring.md  2026-03-13_config_decoupling.md  2026-03-14_experiment_refactor.md  2026-03-16_debug_scripts.md  2026-03-17_perturbator_refactoring.md
docs/development/: tdt.md
docs/ori-code-explain/: attribution_lmd.md  attribution_zeroshot.md  experiment.md  fewshot.md  increamental.md  incremental_metric.md  transfer_attribution_lmd.md  transfer_attribution_mitigate_lmd.md  transfer_attribution_zeroshot.md  transfer_binary_lmd.md  transfer_binary_mitigate_lmd.md  transfer_binary_zeroshot.md  transfer_mitigate_zeroshot.md
easymgtd/: __init__.py  auto.py  utils.py
easymgtd/experiment/: __init__.py  _base.py  demasq_experiment.py  fewshot_experiment.py  gptzero_experiment.py  incremental_experiment.py  incremental_threshold_experiment.py  perturb_experiment.py  supervised_experiment.py  threshold_experiment.py
easymgtd/loading/: dataloader.py  dataloader_attribution.py  model_loader.py
easymgtd/methods/: IntrinsicDim.py  __init__.py  demasq.py  tdt.py  (+7 more)
mgtbench/: auto.py
notebook/: test_baselines.ipynb
run/: attribution_lmd.py  attribution_zeroshot.py  benchmark.py  config_example.json  fewshot.py  increamental.py  incremental_metric.py  transfer_attribution_lmd.py  transfer_attribution_mitigate_lmd.py  transfer_attribution_zeroshot.py  transfer_binary_lmd.py  transfer_binary_mitigate_lmd.py  transfer_binary_zeroshot.py  transfer_mitigate_zeroshot.py
(+33 files in other folders)
