[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "easymgtd"
version = "0.1.0"
description = "EasyMGTD: A unified benchmark for Machine-Generated Text Detection"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["easymgtd*"]
